update some minor stuffs

--- a/final-project/aboutus.html
+++ b/final-project/aboutus.html
@@ -27,10 +27,10 @@
                 <h1 class="home-title">Who am I?</h1>
                 <p>Click the button to know me more.</p>
                 <div>
-                    <a id="know-more" href="#title">Know More</a>
+                    <a id="know-more" href="#bottom-section">Know More</a>
                 </div>
             </section>
-            <section class="bottom-section">
+            <section id="bottom-section">
                 <img class="main-img" src="images/IMG_3854.jpg" alt="">
                 <img class="first-img" src="images/97121B3F-8643-4504-B5F2-95EB36672566.jpg" alt="">
                 <img class="second-img" src="images/697280B1-B77D-43B9-BEB9-8484A8C6AC8D.jpg" alt="">
