created for cellphone screen

--- a/final-project/aboutus.html
+++ b/final-project/aboutus.html
@@ -32,12 +32,12 @@
             </section>
             <section id="bottom-section">
                 <img class="main-img" src="images/IMG_3854.jpg" alt="">
+                <p>My name is <span style="color: #0AEFFF;font-weight: bold">Simon</span>. I'm from Taiwan so I can speak <span style="color: #2EE772;font-weight: bold">English</span> and <span style="color: #D5162F;font-weight: bold">Chinese</span>. I am a good fit for you if you are looking for a photographer who can speak those two languages. Since I started taking photos, it has already been over <span style="color: #FAC31D;font-weight: bold">6 years</span> now. I like to use my camera to record the views and things that I see, in other words, to use a camera to tell my stories to others. Then, let them see the world from my eyes. <span style="color: #7137A4;font-weight: bold">Click the bottom below to see my portfolio.</span></p>
                 <img class="first-img" src="images/97121B3F-8643-4504-B5F2-95EB36672566.jpg" alt="">
                 <img class="second-img" src="images/697280B1-B77D-43B9-BEB9-8484A8C6AC8D.jpg" alt="">
                 <img class="third-img" src="images/429106596_709693414691588_4902203839240097515_n.jpg" alt="">
                 <img class="forth-img" src="images/2AA66874-5FC6-41F0-8CAB-A603F4050E2D.jpg" alt="">
                 <img class="fifth-img" src="images/DSC01045.jpg" alt="">
-                <p>My name is <span style="color: #0AEFFF;font-weight: bold">Simon</span>. I'm from Taiwan so I can speak <span style="color: #2EE772;font-weight: bold">English</span> and <span style="color: #D5162F;font-weight: bold">Chinese</span>. I am a good fit for you if you are looking for a photographer who can speak those two languages. Since I started taking photos, it has already been over <span style="color: #FAC31D;font-weight: bold">6 years</span> now. I like to use my camera to record the views and things that I see, in other words, to use a camera to tell my stories to others. Then, let them see the world from my eyes. <span style="color: #7137A4;font-weight: bold">Click the bottom below to see my portfolio.</span></h3>
             </section>
             <div class="portfilio-button">
                 <a id="portfolio" href="portfolio.html">Portfolio</a>
