fix some minor stuffs

--- a/final-project/portfolio.html
+++ b/final-project/portfolio.html
@@ -167,8 +167,7 @@
         <footer>
             <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
             <p><a href="aboutus.html" target="_blank">About Us</a></p>
-            <p><a href="portfilio.html" target="_blank"></a>Portfolio</p>
-            <p><a href="booknow.html" target="_blank"></a>Book Now</p>
+            <p><a href="portfilio.html" target="_blank">Portfolio</a></p>
             <p><a href="contactus.html" target="_blank">Contact Us</a></p>
             
             <div class="social">
