--- a/final-project/index.html
+++ b/final-project/index.html
@@ -65,9 +65,9 @@
             </div>
         </main>
         <footer>
-            <p>VisionCrafters Studio &copy; 2024 - Cheng-En Sung</p>
+            <p><a href="site-plan.html">VisionCrafters Studio &copy; 2024 - Cheng-En Sung</a></p>
             <p><a href="index.html" target="_blank">Home</a></p>
-            <p><a href="aboutus.html" target="_blank">About Us</a></p>
+            <p><a href="aboutus.html" target="_blank">About Me</a></p>
             <p><a href="portfilio.html" target="_blank">Portfolio</a></p>
             <p><a href="contactus.html" target="_blank">Contact Us</a></p>
             
