several minor things fixed

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -28,7 +28,7 @@
                     <h1 class="home-title">Wanna to get professional photos?</h1>
                     <p>Here is the right place to reach up.</p>
                     <div>
-                        <a id="see-more" href="">See More</a>
+                        <a id="see-more" href="#purpose">See More</a>
                     </div>
                 </section>
             </div>
@@ -39,7 +39,7 @@
                     <p>We aim to help capture and preserve memories for various occasions, including graduations, weddings, engagements, family milestones, anniversaries, and special celebrations. From documenting academic achievements to immortalizing love stories, these professionals ensure every moment is beautifully captured. Whether it's individual portraits, group photos, or candid shots, their expertise creates lasting mementos for clients to cherish.</p>
                 </div>
                 <div>
-                    <a id="about-us" href="aboutus.html">About Us</a>
+                    <a id="about-us" href="aboutus.html">About Me</a>
                 </div>
             </section>
             <section id="map">
