more minor things

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -65,11 +65,11 @@
             </div>
         </main>
         <footer>
-            <p><a href="site-plan.html">VisionCrafters Studio &copy; 2024 - Cheng-En Sung</a></p>
+            <p><a href="site-plan.html" target="_blank">VisionCrafters Studio &copy; 2024 - Cheng-En Sung</a></p>
             <p><a href="index.html" target="_blank">Home</a></p>
-            <p><a href="aboutus.html" target="_blank">About Me</a></p>
+            <p><a href="aboutus.html" target="_blank">About</a></p>
             <p><a href="portfilio.html" target="_blank">Portfolio</a></p>
-            <p><a href="contactus.html" target="_blank">Contact Us</a></p>
+            <p><a href="contactus.html" target="_blank">Contact</a></p>
             
             <div class="social">
                 <a href="mailto:chengensung1219@gmail.com" target="_blank">
